# git-valet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: aside.rs  config.rs  git_helpers.rs  hooks.rs  main.rs
tests/: config_test.rs  hooks_test.rs
