[package]
name = "git-valet"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Transparently version private files (.env, secrets, notes, AI prompts) in a separate repo, synced via git hooks. Zero workflow change."
keywords = ["git", "private-files", "secrets", "cli", "hooks"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/JSpatim/git-valet"
homepage = "https://github.com/JSpatim/git-valet"
license = "MIT"
readme = "README.md"
exclude = [".github/", "tests/", "CONTRIBUTING.md", "SECURITY.md"]

[[bin]]
name = "git-valet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
colored = "2"
blake3 = "1"
dunce = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
